Mise en place du module de commande

--- a/ApplicationFerme/src/main/resources/templates/commandePouletPC.html
+++ b/ApplicationFerme/src/main/resources/templates/commandePouletPC.html
@@ -68,7 +68,7 @@
 				<br>
 				<br>
 				<div class="card mt-4">
-					<img class="card-img-top img-fluid" src="image/poulets.jpg" alt="">
+					<img class="card-img-top img-fluid" src="image/pouletPretAcuire.png" alt="">
 					<div class="card-body">
 						<h3 class="card-title">Product Name</h3>
 						<h4>$24.99</h4>
@@ -79,9 +79,6 @@
 						4.0 stars
 					</div>
 				</div>
-				<!--                   -->
-
-
 				<div class="col-md-8 order-md-1">
 					<h4 class="mb-3">Entrer le nombre de pièce souhaité</h4>
 					<form class="needs-validation" novalidate>
@@ -96,11 +93,9 @@
 					</form>
 				</div>
 			</div>
-
 		</div>
 
 	</div>
-
 	<br>
 	<br>
 	<!-- /.container -->
@@ -112,7 +107,6 @@
 		</div>
 		<!-- /.container -->
 	</footer>
-
 
 </body>
 
