--- a/ApplicationFerme/src/main/resources/templates/index.html
+++ b/ApplicationFerme/src/main/resources/templates/index.html
@@ -123,7 +123,7 @@
               </div>
               <div class="card-footer">
 				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" href="#">Commander</a>
+				<a class="nav-link" th:href="@{/commandePouletPC}">Commander</a>
               </div>
             </div>
           </div>
@@ -140,7 +140,7 @@
               </div>
               <div class="card-footer">
 				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" href="#">Commander</a>
+				<a class="nav-link" th:href="@{/commandeCuisse}">Commander</a>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
               </div>
               <div class="card-footer">
 				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" href="#">Commander</a>
+				<a class="nav-link" th:href="@{/commandeFillet}">Commander</a>
               </div>
             </div>
           </div>
@@ -175,7 +175,7 @@
               </div>
               <div class="card-footer">
 				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" href="#">Commander</a>
+				<a class="nav-link" th:href="@{/commandeOeuf}">Commander</a>
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
               </div>
               <div class="card-footer">
 				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" href="#">Commander</a>
+				<a class="nav-link" th:href="@{/commandeAilleP}">Commander</a>
               </div>
             </div>
           </div>
@@ -216,10 +216,6 @@
     </div>
     <!-- /.container -->
   </footer>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
