--- a/ApplicationFerme/src/main/resources/templates/index.html
+++ b/ApplicationFerme/src/main/resources/templates/index.html
@@ -3,224 +3,224 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>Acceuil Chicken Farm</title>
+    <title>Acceuil Chicken Farm</title>
 
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
-  <link href="css/shop-homepage.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+    <link href="css/shop-homepage.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Chicken Farm</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Acceuil
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="#">Chicken Farm</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Acceuil
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
-  <!-- Page Content -->
-  <div class="container">
+<!-- Page Content -->
+<div class="container">
 
     <div class="row">
 
-      <div class="col-lg-3">
+        <div class="col-lg-3">
 
-        <h1 class="my-4">Chicken Farm</h1>
-        <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
-        </div>
-
-      </div>
-      <!-- /.col-lg-3 -->
-
-      <div class="col-lg-9">
-
-        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="image/pouletImageP.jpg" alt="First slide">
+            <h1 class="my-4">Chicken Farm</h1>
+            <div class="list-group">
+                <a href="#" class="list-group-item">Category 1</a>
+                <a href="#" class="list-group-item">Category 2</a>
+                <a href="#" class="list-group-item">Category 3</a>
             </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="image/imagePoulet2.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="image/poulets.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Poulet</a>
-                </h4>
-                <h5>17€</h5>
-                <p class="card-text">Poulet de la ferme 1,7 kg :  10€/kg.</p>
-              </div>
-              <div class="card-footer">
-				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" th:href="@{/commandePoulet}">Commander</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="image/pouletPretAcuire.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Poulet prêt à cuire</a>
-                </h4>
-                <h5>22€</h5>
-                <p class="card-text">Poulet prêt à cuire 2 kg : 11€/kg</p>
-              </div>
-              <div class="card-footer">
-				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" th:href="@{/commandePouletPC}">Commander</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="image/cuisse-poulet.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Cuisse de poulet</a>
-                </h4>
-                <h5>13,40€</h5>
-                <p class="card-text">Lot de deux cuisses de poulets 750 g : 17,86€/kg</p>
-              </div>
-              <div class="card-footer">
-				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" th:href="@{/commandeCuisse}">Commander</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" 
-              <a href="#"><img class="card-img-top" src="image/filet_poulet.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Filet de poulet</a>
-                </h4>
-                <h5>11€</h5>
-                <p class="card-text">Filets de poulet decoupés nature 2 x 225g : 24,44€/kg</p>
-              </div>
-              <div class="card-footer">
-				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" th:href="@{/commandeFillet}">Commander</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="image/oeuf-frais.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Oeufs frais</a>
-                </h4>
-                <h5>$7.99</h5>
-                <p class="card-text">Lot de 12 oeufs frais 800g : 14,75€/kg</p>
-              </div>
-              <div class="card-footer">
-				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" th:href="@{/commandeOeuf}">Commander</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="image/aile-poulet.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Aile de poulet</a>
-                </h4>
-                <h5>9€</h5>
-                <p class="card-text">Aile de poulet 1kg : 9€/kg</p>
-              </div>
-              <div class="card-footer">
-				<small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-				<a class="nav-link" th:href="@{/commandeAilleP}">Commander</a>
-              </div>
-            </div>
-          </div>
 
         </div>
-        <!-- /.row -->
+        <!-- /.col-lg-3 -->
 
-      </div>
-      <!-- /.col-lg-9 -->
+        <div class="col-lg-9">
+
+            <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="image/pouletImageP.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="image/imagePoulet2.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+            <div class="row">
+
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="#"><img class="card-img-top" src="image/poulets.jpg" alt=""></a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a href="#">Poulet</a>
+                            </h4>
+                            <h5>17€</h5>
+                            <p class="card-text">Poulet de la ferme 1,7 kg : 10€/kg.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                            <a class="nav-link" th:href="@{/commandePoulet}">Commander</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="#"><img class="card-img-top" src="image/pouletPretAcuire.png" alt=""></a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a href="#">Poulet prêt à cuire</a>
+                            </h4>
+                            <h5>22€</h5>
+                            <p class="card-text">Poulet prêt à cuire 2 kg : 11€/kg</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                            <a class="nav-link" th:href="@{/commandePouletPC}">Commander</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="#"><img class="card-img-top" src="image/cuisse-poulet.jpg" alt=""></a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a href="#">Cuisse de poulet</a>
+                            </h4>
+                            <h5>13,40€</h5>
+                            <p class="card-text">Lot de deux cuisses de poulets 750 g : 17,86€/kg</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                            <a class="nav-link" th:href="@{/commandeCuisse}">Commander</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="#"><img class="card-img-top"
+                            <a href="#"><img class="card-img-top" src="image/filet_poulet.jpg" alt=""></a>
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a href="#">Filet de poulet</a>
+                                </h4>
+                                <h5>11€</h5>
+                                <p class="card-text">Filets de poulet decoupés nature 2 x 225g : 24,44€/kg</p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                                <a class="nav-link" th:href="@{/commandeFillet}">Commander</a>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="#"><img class="card-img-top" src="image/oeuf-frais.jpg" alt=""></a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a href="#">Oeufs frais</a>
+                            </h4>
+                            <h5>$7.99</h5>
+                            <p class="card-text">Lot de 12 oeufs frais 800g : 14,75€/kg</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                            <a class="nav-link" th:href="@{/commandeOeuf}">Commander</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="#"><img class="card-img-top" src="image/aile-poulet.jpg" alt=""></a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a href="#">Aile de poulet</a>
+                            </h4>
+                            <h5>9€</h5>
+                            <p class="card-text">Aile de poulet 1kg : 9€/kg</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                            <a class="nav-link" th:href="@{/commandeAilleP}">Commander</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- /.row -->
+
+        </div>
+        <!-- /.col-lg-9 -->
 
     </div>
     <!-- /.row -->
 
-  </div>
-  <!-- /.container -->
+</div>
+<!-- /.container -->
 
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
+<!-- Footer -->
+<footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
     <!-- /.container -->
-  </footer>
+</footer>
 
 </body>
 
 </html>
-
 
 
 <!--
